kustomize/app_b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aap-b
  labels:
    app: app-b
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
      version: v1
  template:
    metadata:
      labels:
        app: app-b
        version: v1
    spec:
      containers:
        - name: app-b
          image: APP_IMAGE_URL
          ports:
            - containerPort: 80
